documentação do filtro implementada
