# swagger.json
@@ -110,8 +110,74 @@
               }
             }
           },
+          "400": {
+            "description": "Bad Request - O registro não pôde ser encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                },
+                "examples": {
+                  "horaInvalida": {
+                    "value": {
+                      "error": "Filtro com horas inválidas."
+                    }
+                  },
+                  "DataInvalida": {
+                    "value": {
+                      "error": "Filtro com datas inválidas."
+                    }
+                  }
+                }
+              }
+            }
+          },
           "404": {
             "description": "Registros não encontrados"
+          },
+          "500": {
+            "description": "Erro interno ocorreu."
+          }
+        }
+      },
+      "post": {
+        "tags": ["Instrutor"],
+        "summary": "Busca por registros de acordo com os filtros determinados",
+        "parameters": [
+          {
+            "name": "matriculaI",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Matrícula do instrutor"
+          }
+        ],
+        "requestBody": {
+          "description": "Dados necessários para buscar os registros com base no desejado.",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/requestFiltro"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Registros encontrados",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/listaRegistros"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Registros não encontrados."
           },
           "500": {
             "description": "Erro interno ocorreu."
@@ -653,7 +719,47 @@
             }
           }
         }
-      }
+      },
+      "requestFiltro":{
+        "type": "object",
+        "properties": {
+          "dataInicioFiltro": {
+            "type": "string",
+            "format": "date",
+            "description": "Data de início para filtro (opcional)",
+            "example": "2024-02-23"
+          },
+          "dataFinalFiltro": {
+            "type": "string",
+            "format": "date",
+            "description": "Data final para filtro (opcional)",
+            "example": "2024-02-25"
+          },
+          "horaInicioFiltro": {
+            "type": "string",
+            "format": "time",
+            "description": "Hora de início para filtro (opcional)",
+            "example": "01:00"
+          },
+          "horaFinalFiltro": {
+            "type": "string",
+            "format": "time",
+            "description": "Hora final para filtro (opcional)",
+            "example": "23:00"
+          },
+          "FKservico": {
+            "type": "string",
+            "description": "Chave estrangeira para o serviço",
+            "example": "1"
+          },
+          "ordenacao": {
+            "type": "string",
+            "description": "Ordem de ordenação dos registros (opcional)",
+            "example": "asc"
+          }
+        },
+        "required": []
+      }      
     }
   }
 }
